# haskell-workshop

./: .gitignore  README.md  haskell-workshop.cabal
slides/: haskell-intro-paul.md
src/HaskellWorkshop/: Beginning.hs  Worksheet01.hs  Worksheet02.hs  WorksheetIO.hs
src/HaskellWorkshop/Beginning/: Internal.hs
src/Solution/: HausVomNikolaus.hs  Sudoku.hs
test/HaskellWorkshop/: BeginningSpec.hs
test/HaskellWorkshop/Worksheet01/Test/: Main.hs
