Name:			haskell-workshop
Version:                0.0.0
Author:                 Alex P<alex@clojurewerkz.org>
Maintainer:             Alex P<alex@clojurewerkz.org>
-- Synopsis:
-- Description:
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall -fwarn-incomplete-uni-patterns -fwarn-tabs
  Exposed-Modules:      HaskellWorkshop.Beginning
                        HaskellWorkshop.WorksheetIO
  Other-Modules:        HaskellWorkshop.Beginning.Internal
  Build-Depends:        base >= 4 && < 5
                      , hspec

Source-Repository head
  Type:                 git
--  Location:
