Name:			haskell-workshop
Version:                0.0.0
Author:                 Alex P<alex@clojurewerkz.org>
Maintainer:             Alex P<alex@clojurewerkz.org>
-- Synopsis:
-- Description:
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall -fwarn-incomplete-uni-patterns -fwarn-tabs
  Exposed-Modules:      HaskellWorkshop.WorksheetIO
  -- HaskellWorkshop.Beginning
  -- Other-Modules:        HaskellWorkshop.Beginning.Internal
  Build-Depends:        base >= 4 && < 5
                      , hspec

Test-Suite test-Worksheet01
  Default-Language:     Haskell2010
  type:                 exitcode-stdio-1.0
  build-depends:        base >= 4 && < 5,
                        hspec
  ghc-Options:          -Wall -fwarn-incomplete-uni-patterns -fwarn-tabs
  hs-source-dirs:       src/HaskellWorkshop
  main-is:              Worksheet01.hs



Source-Repository head
  Type:                 git
--  Location:


Executable hausvomnikolaus
  Default-Language: Haskell2010
  Main-Is: src/Solution/HausVomNikolaus.hs
  GHC-Options: -Wall -fwarn-incomplete-uni-patterns -fwarn-tabs -fwarn-missing-import-lists -main-is Solution.HausVomNikolaus
  Build-Depends: base